commit tree 5af5389af3d0d6a4573b8536a6491bd89e4e2130

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,16 +1,29 @@
 <!doctype html>
 <html>
   <head>
-    <title>Fwitter</title>
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap');
+  body {background-color: White;
+  font-family: 'Courier New', monospace;}
+  h1 {color: DarkOliveGreen;
+  font-family: 'Palette Mosaic', cursive;
+  font-size: 96px;}
+  h2 {color: DarkOliveGreen;}
+  h3 {color: DarkOliveGreen;}
+  a {color: GoldenRod;}
+  title {color: DarkOliveGreen;}
+  li {color: DarkOliveGreen;}
+  input {font-family: 'Courier New', monospace;}
+
+  </style>
+    <title>FWITTER</title>
   </head>
   <body>
 
     <div class="container">
-      <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
-    </div>
+      <h1>FWITTER</h1>
     <%= yield %>
+    </div>
 
   </body>
 </html>
