--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
-<h1> Welcome to Fwitter. </h1>
+<h2> Welcome to Fwitter! </h2>
 
-<p> Sign In or Sign Up: </p>
+<h3><a href="/login">Log In</a> or <a href="/signup">Sign Up</a></h3>
