--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
-<h3>Login</h3>
+<h3>Log in to Fwitter</h3>
 <form action="/login" method="POST">
-  <input type="text" name="username" placeholder="Username">
-  <input type="text" name="email" placeholder="E-Mail">
-  <input type="password" name="password" placeholder="Password"> <br>
-  <input type="submit" value="Log In">
+  <input type="text" name="username" placeholder="Username"> <br>
+  <input type="text" name="email" placeholder="E-Mail"> <br>
+  <input type="password" name="password" placeholder="Password"> <br><br>
+  <input type="submit" id="submit" value="Log In">
 </form>
