--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,7 @@
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="email" placeholder="E-Mail:">
-  <input type="password" name="password" placeholder="Password:">
-  <input type="submit" value="Sign Up">
+  <input type="text" name="username" placeholder="Username"><br>
+  <input type="text" name="email" placeholder="E-Mail"><br>
+  <input type="text" name="password" placeholder="Password"><br><br>
+  <input type="submit" id="submit" value="Sign Up">
 </form>
